[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/joystix/joystix.tres" type="DynamicFont" id=1]
[ext_resource path="res://displays/info_display/info_display.gd" type="Script" id=2]
[ext_resource path="res://assets/display/close_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/provincias/azuay.png" type="Texture" id=4]

[node name="InfoDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="MainVBox"]
margin_right = 512.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="MarginContainer" parent="MainVBox/Header"]
margin_right = 168.0
margin_bottom = 22.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="MarginContainer" parent="MainVBox/Header"]
margin_left = 172.0
margin_right = 340.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MainVBox/Header/Center"]
margin_top = 5.0
margin_right = 168.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "[province.name]"
align = 1
valign = 1

[node name="Right" type="MarginContainer" parent="MainVBox/Header"]
margin_left = 344.0
margin_right = 512.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MainVBox/Header/Right"]
margin_left = 140.0
margin_right = 168.0
margin_bottom = 22.0
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Body" type="MarginContainer" parent="MainVBox"]
margin_top = 26.0
margin_right = 512.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Scroll" type="ScrollContainer" parent="MainVBox/Body"]
margin_left = 8.0
margin_right = 504.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="DataVBox" type="VBoxContainer" parent="MainVBox/Body/Scroll"]
margin_right = 484.0
margin_bottom = 671.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="MarginContainer" parent="MainVBox/Body/Scroll/DataVBox"]
margin_right = 484.0

[node name="Image" type="TextureRect" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 4.0
margin_right = 484.0
margin_bottom = 26.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Separator3" type="MarginContainer" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 30.0
margin_right = 484.0
margin_bottom = 30.0

[node name="Capital" type="Label" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 34.0
margin_right = 484.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Capital: [province.capital]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator2" type="MarginContainer" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 50.0
margin_right = 484.0
margin_bottom = 50.0

[node name="Venues" type="Label" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 54.0
margin_right = 484.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Puntos/eventos de interés: [Puntos interés]"
autowrap = true

[node name="Separator4" type="MarginContainer" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 70.0
margin_right = 484.0
margin_bottom = 70.0

[node name="Description" type="Label" parent="MainVBox/Body/Scroll/DataVBox"]
margin_top = 74.0
margin_right = 484.0
margin_bottom = 671.0
custom_fonts/font = ExtResource( 1 )
text = "Descripción: [province.description] Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fringilla ex a rhoncus convallis. Integer in turpis dui. Praesent tristique iaculis elementum. Pellentesque magna massa, rhoncus in odio sed, blandit ornare mi. In iaculis nibh risus, ac eleifend orci tempus ac. Sed elementum, ipsum eu malesuada faucibus, massa elit mollis leo, sit amet rhoncus dui ligula ut augue. Duis metus orci, fringilla eu neque vitae, mattis consequat ipsum. Proin mollis metus sed orci dignissim, sed vehicula enim placerat. Vestibulum venenatis eros augue, quis aliquam erat vestibulum laoreet. Sed varius dolor et pretium facilisis. Fusce vel felis tellus. Curabitur quis massa accumsan, convallis tortor vel, dapibus erat. Curabitur nec mollis elit. Pellentesque tempor purus vel condimentum rhoncus. Ut nec commodo massa. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.

Ut non pharetra sapien. Praesent mollis, augue non feugiat malesuada, justo metus commodo sapien, id scelerisque risus dui eu est. Donec ultricies porta risus, id finibus elit hendrerit vitae. Phasellus ligula eros, imperdiet non viverra vel, pharetra eu nisi. In tincidunt sollicitudin pellentesque. Sed at vestibulum turpis, eget hendrerit nunc. Vivamus eros felis, tincidunt vitae porttitor id, mattis eget lectus. Aenean quis purus in sem vulputate pharetra ut eget leo. Ut blandit tincidunt accumsan. Donec congue tincidunt est, eget consectetur augue consequat id. Fusce efficitur aliquet risus vel sodales. Nunc finibus vestibulum suscipit.

Nullam malesuada mi at sodales bibendum. Vivamus fermentum lacinia ultrices. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam tincidunt nunc eget convallis dignissim. Integer quis dui felis. Mauris tempor nibh nec tellus semper dignissim. Phasellus posuere magna eget sem fermentum scelerisque. Donec dapibus et risus a feugiat. Nunc et sem ante. Nunc vel sem lorem. Aliquam condimentum arcu at est faucibus faucibus. In rutrum sed ipsum et vestibulum. Nam cursus eleifend pharetra. )"
autowrap = true
[connection signal="pressed" from="MainVBox/Header/Right/CloseButton" to="." method="_on_Button_pressed"]
